--- a/_posts/2017-10-26-dinosaurs.html
+++ b/_posts/2017-10-26-dinosaurs.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "TESTING IF EDITS WORK"
-subtitle: "because they lacked opposable thumbs and the brainpower to build a space program."
+subtitle: "IS THIS WORKING"
 date: 2017-10-26 23:45:13 -0400
 background: '/img/posts/01.jpg'
 ---
