--- a/about.html
+++ b/about.html
@@ -1,12 +1,16 @@
 ---
 layout: page
 title: About Me
-description: 
+description:
 background: '/img/bg-about.jpg'
 ---
 
 <p>I am an Undergraduate student at the University of Michigan studying Physics and Computer Science.</p>
 
-<p>Currently, I am working on researching light command attacks through the SPQR lab.</p>
+<p>Currently, I am working on researching light commands through the SPQR lab. Light commands are
+    attacks on MEMs microphones where attackers can inject commands into voice-activated systems such as 
+    Aexa, Siri or Google Assistant using laser-based audio injection. We are currently investigated the
+    physics behind the attack by looking at consequences of the photoacoustic and photovoltaic effects.
+</p>
 
 <p class="mb-5">Does this edit show up?</p>
