--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ background: '/img/bg-about.jpg'
     physics behind the attack by looking at consequences of the photoacoustic and photovoltaic effects.
 </p>
 
-<p class="mb-5">I also work with Dr. Valluri from the University of Michigan Astronomy Department to
+<p>I also work with Dr. Valluri from the University of Michigan Astronomy Department to
     study kinematics around black holes in disk galaxy simulations. Currently, we are looking at the
     M-Sigma relation in Illustris TNG-100 simulation galaxies and comparing the effect of 
     different velocity dispersion measurement methods on the relationship.
