--- a/_posts/2017-10-31-man-must-explore.html
+++ b/_posts/2017-10-31-man-must-explore.html
@@ -17,7 +17,7 @@ background: '/img/bg-post.jpg'
 
 <h2 class="section-heading">Photoacoustics, a Historical Review</h2>
 
-<p>Photoacoustics, a Historical Review walks through various developments in technology utilizing the photoacoustic effect. Additionally, the paper also provides more detail on the physical models describing mechanisms producing the effect, mainly focusing on photothermal mechanisms. I will walk through the thermal piston model specifically since it may describe the mechanism behind the photoacoustic effect in MEMs microphones.</p>
+<p><i>Photoacoustics, a Historical Review</i> walks through various developments in technology utilizing the photoacoustic effect. Additionally, the paper also provides more detail on the physical models describing mechanisms producing the effect, mainly focusing on photothermal mechanisms. I will walk through the thermal piston model specifically since it may describe the mechanism behind the photoacoustic effect in MEMs microphones.</p>
 
 <p>In the thermal piston model, a sample is sealed in a chamber with coupling gas. When a beam of modulated light hits the chamber, it heats up initial molecules which then propagate the signal throughout the chamber as a thermal wave. This allows the gas to undergo periodic expansion and contraction that creates a sound wave which can be picked up by microphones. As a consequence of this model, photothermal and photoacoustic spectroscopy have evolved into favorable ways to study the composition of gases.</p>
 
