--- a/_posts/2017-10-31-man-must-explore.html
+++ b/_posts/2017-10-31-man-must-explore.html
@@ -11,7 +11,7 @@ background: '/img/bg-post.jpg'
 
 <h2 class="section-heading">Upon the Production and Reproduction of Sound by Light</h2>
 
-<p>This paper is Alexander Graham Bell’s original work in the discovery of the photoacoustic effect. The original experiment was as follows: light is directed towards a flexible plane mirror and then reflected onto a piece of selenium. When a speaker’s voice is directed towards the mirror, the vibrations of the mirror result in an oscillating beam of light hitting the selenium. Selenium, whose electrical resistance varies depending incoming intensity of light, is able to transmit signals to a different location. </p>
+<p>This paper is Alexander Graham Bell’s original work in the discovery of the photoacoustic effect. The original experiment was as follows: light is directed towards a flexible plane mirror and then reflected onto a piece of selenium. When a speaker’s voice is directed towards the mirror, the vibrations of the mirror result in an oscillating beam of light hitting the selenium. Selenium, whose electrical resistance varies depending on incoming intensity of light, is able to transmit signals to a different location. </p>
 
 <p>However, as a consequence of trying to find the best material for audio transmission, Bell found that replacing selenium with any material does not entirely diminish all of the audio. Any substance (even those that are insulators) created in the form of a thin diaphragm, could transmit audio through a tube. Bell attributed this phenomenon, now known as the photoacoustic effect, to light creating vibrations of the diaphragm and those vibrations producing sound waves.</p>
 
