--- a/_posts/2020-05-17-Week1.html
+++ b/_posts/2020-05-17-Week1.html
@@ -3,7 +3,7 @@ layout: post
 title: "Week 1"
 subtitle: "More Background Readings and Starting Physical Modeling"
 date: 2020-05-17 18:00:00 -0400
-background: '/img/posts/comsol.jpg'
+background: '/img/posts/photoelectric.jpg'
 ---
 
 <p>
