--- a/_posts/2020-05-25-Week2.html
+++ b/_posts/2020-05-25-Week2.html
@@ -24,9 +24,9 @@ background: '/img/posts/photoelectric.jpg'
     The pulsed light implemented in the model has a duty cycle of 1ms and a period of 5ms. The temperature curve and magnitude of vibrations corresponding to the pulsed laser is shown below:
 </p>
 
-<img src="/img/posts/PL_t">
+<img src="/img/posts/PL_t.png">
 
-<img src="/img/posts/PL_V">
+<img src="/img/posts/PL_V.png">
 
 
 
