--- a/_posts/2020-05-25-Week2.html
+++ b/_posts/2020-05-25-Week2.html
@@ -28,5 +28,46 @@ background: '/img/posts/photoelectric.jpg'
 
 <img src="/img/posts/PL_V.png">
 
+<p>
+    Because the temperature rises sharply at the beginning of the curve rather than experiencing a gradual increase, the pulsed laser does have an impact on heat conduction in the silicon. However, the temperature increase for following pulses is not as abrupt, and this translates to reduced vibrations through the silicon diaphragm.
+</p>
+
+<p>
+    Some factors that allow for greater increases in temperatures and larger vibrations include increasing the power of the laser and decreasing the thickness of the silicon diaphragm. An example of using a 10W laser, an increase from the 60mW laser that was used in the LightCommands experiment, is shown below: 
+</p>
+
+<img src="/img/posts/PL_10W_t.png">
+
+<img src="/img/posts/PL_10W_V.png">
+
+<p>
+    This plot shows clear, sharp vibrations and temperature “steps” corresponding to the laser pulses.
+</p>
+
+<h3 class="section-subheading">Backplate</h3>
+
+<p>
+    To allow heat waves to more accurately propagate through MEMs device components rather than being confined to the silicon diaphragm, we added a backplate. The backplate was fixed against thermal expansion, so the only vibration that occurs is in the silicon diaphragm:
+</p>
+
+<p>
+    The addition of this material changes both the temperature distribution and vibrations measured for the silicon diaphragm (excluding thermal changes of the backplate):
+</p>
+
+<img src="/img/posts/Backplate_t.png">
+
+<img src="/img/posts/Backplate_V.png">
+
+<p>
+    An interesting result is the sharp spike in temperature that is present in the first 10ms. This is related to how heat moves through the model components, and the possible effects of thermoelastic waves are discussed in a later section.
+</p>
+
+<h3 class="section-subheading">Next Steps</h3>
+
+<p>
+    The next steps for improvement in the model is to add air to the surroundings of the diaphragm and backplate. Since air also has the ability to convert light to sound, this will involve not only adding heat transfer to the air, but also pressure acoustics to enable any resulting acoustic waves to affect the diaphragm. What we hope to see from this is a perceptible increase in magnitude for the vibrations on the diaphragm.
+</p>
+
+
 
 
