--- a/_posts/2020-05-25-Week2.html
+++ b/_posts/2020-05-25-Week2.html
@@ -54,7 +54,7 @@ background: '/img/posts/photoelectric.jpg'
     The addition of this material changes both the temperature distribution and vibrations measured for the silicon diaphragm (excluding thermal changes of the backplate):
 </p>
 
-<img src="/img/posts/Backplate_t.png">
+<img src="/img/posts/Backplate_t.jpg">
 
 <img src="/img/posts/Backplate_V.png">
 
