--- a/_posts/2020-05-25-Week2.html
+++ b/_posts/2020-05-25-Week2.html
@@ -59,15 +59,26 @@ background: '/img/posts/photoelectric.jpg'
 <img src="/img/posts/Backplate_V.png">
 
 <p>
-    An interesting result is the sharp spike in temperature that is present in the first 10ms. This is related to how heat moves through the model components, and the possible effects of thermoelastic waves are discussed in a later section.
+    An interesting result is the sharp spike in temperature that is present in the first 10ms. This is related to how heat moves through conduction, the process by which heat is transferred through a solid by subsequent vibrations of neighboring molecules. The equation that describes heat transfer through a solid is known as Fourier’s law, and it is important to look into this mathematical description for our model so that we can better understand the foundations of thermoelastic wave propagation in the diaphragm. 
 </p>
 
-<h3 class="section-subheading">Next Steps</h3>
+<p>
+    Thermoelastic waves are what we are truly interested in observing since they describe the stresses on the material as a function of temperature. These stresses induce the vibrations which in turn can produce acoustic waves. 
+</p>
+
+<h3 class="section-heading">Next Steps</h3>
 
 <p>
     The next steps for improvement in the model is to add air to the surroundings of the diaphragm and backplate. Since air also has the ability to convert light to sound, this will involve not only adding heat transfer to the air, but also pressure acoustics to enable any resulting acoustic waves to affect the diaphragm. What we hope to see from this is a perceptible increase in magnitude for the vibrations on the diaphragm.
 </p>
 
+<h2 class="section-heading">
+    Conclusions from Early-Stage Modeling
+</h2>
+
+<p>
+    Despite improvements on the model, the magnitude of vibrations (1e-10 meters) is still much lower than the thickness (1e-5 meters) of the diaphragm. The largest vibrations occur when temperature increases are rapid. However, the temperature plateaus that can be seen in each temperature graph indicate that the silicon is reaching thermal equilibrium with its surroundings. To get larger vibrations, heat must dissipate from the silicon faster into another medium, or silicon should start at a lower temperature.
+</p>
 
 
 
