--- a/_posts/2020-05-25-Week2.html
+++ b/_posts/2020-05-25-Week2.html
@@ -3,7 +3,7 @@ layout: post
 title: "Week 2"
 subtitle: "Updates on Photoacoustic Effect Modeling"
 date: 2020-05-17 18:00:00 -0400
-background: '/img/posts/photoelectric.jpg'
+background: '/img/posts/PL_t.png'
 ---
 
 <p>
