--- a/_posts/2020-05-25-Week2.html
+++ b/_posts/2020-05-25-Week2.html
@@ -50,6 +50,8 @@ background: '/img/posts/PL_t.png'
     To allow heat waves to more accurately propagate through MEMs device components rather than being confined to the silicon diaphragm, we added a backplate. The backplate was fixed against thermal expansion, so the only vibration that occurs is in the silicon diaphragm:
 </p>
 
+<video src="/img/posts/Membrane Vibration.mov">GIF of Membrane</video>
+
 <p>
     The addition of this material changes both the temperature distribution and vibrations measured for the silicon diaphragm (excluding thermal changes of the backplate):
 </p>
