--- a/_posts/2020-05-25-Week2.html
+++ b/_posts/2020-05-25-Week2.html
@@ -24,9 +24,9 @@ background: '/img/posts/PL_t.png'
     The pulsed light implemented in the model has a duty cycle of 1ms and a period of 5ms. The temperature curve and magnitude of vibrations corresponding to the pulsed laser is shown below:
 </p>
 
-<img src="/img/posts/PL_t.png">
+<img src="/research/img/posts/PL_t.png">
 
-<img src="/img/posts/PL_V.png">
+<img src="/research/img/posts/PL_V.png">
 
 <p>
     Because the temperature rises sharply at the beginning of the curve rather than experiencing a gradual increase, the pulsed laser does have an impact on heat conduction in the silicon. However, the temperature increase for following pulses is not as abrupt, and this translates to reduced vibrations through the silicon diaphragm.
@@ -36,9 +36,9 @@ background: '/img/posts/PL_t.png'
     Some factors that allow for greater increases in temperatures and larger vibrations include increasing the power of the laser and decreasing the thickness of the silicon diaphragm. An example of using a 10W laser, an increase from the 60mW laser that was used in the LightCommands experiment, is shown below: 
 </p>
 
-<img src="/img/posts/PL_10W_t.png">
+<img src="/research/img/posts/PL_10W_t.png">
 
-<img src="/img/posts/PL_10W_V.png">
+<img src="/research/img/posts/PL_10W_V.png">
 
 <p>
     This plot shows clear, sharp vibrations and temperature “steps” corresponding to the laser pulses.
@@ -50,15 +50,15 @@ background: '/img/posts/PL_t.png'
     To allow heat waves to more accurately propagate through MEMs device components rather than being confined to the silicon diaphragm, we added a backplate. The backplate was fixed against thermal expansion, so the only vibration that occurs is in the silicon diaphragm:
 </p>
 
-<video src="/img/posts/Membrane Vibration.mov">GIF of Membrane</video>
+<video src="/research/img/posts/Membrane Vibration.mov">GIF of Membrane</video>
 
 <p>
     The addition of this material changes both the temperature distribution and vibrations measured for the silicon diaphragm (excluding thermal changes of the backplate):
 </p>
 
-<img src="/img/posts/Backplate_t.jpg">
+<img src="/research/img/posts/Backplate_t.jpg">
 
-<img src="/img/posts/Backplate_V.png">
+<img src="/research/img/posts/Backplate_V.png">
 
 <p>
     An interesting result is the sharp spike in temperature that is present in the first 10ms. This is related to how heat moves through conduction, the process by which heat is transferred through a solid by subsequent vibrations of neighboring molecules. The equation that describes heat transfer through a solid is known as Fourier’s law, and it is important to look into this mathematical description for our model so that we can better understand the foundations of thermoelastic wave propagation in the diaphragm. 
