--- a/_posts/2020-05-25-Week2.html
+++ b/_posts/2020-05-25-Week2.html
@@ -24,7 +24,7 @@ background: '/img/posts/PL_t.png'
     The pulsed light implemented in the model has a duty cycle of 1ms and a period of 5ms. The temperature curve and magnitude of vibrations corresponding to the pulsed laser is shown below:
 </p>
 
-<img src="/research/img/posts/PL_t.png">
+<img src="/research/img/posts/PL_t.png" width=500 heigh=500>
 
 <img src="/research/img/posts/PL_V.png">
 
