--- a/_posts/2020-06-01-Week3.html
+++ b/_posts/2020-06-01-Week3.html
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "Week 2"
-subtitle: "Updates on Photoacoustic Effect Modeling"
+title: "Week 3"
+subtitle: "Thermal-Piston Model"
 date: 2020-06-01 18:00:00 -0400
 background: '/img/posts/Laser Intensity.png'
 ---
