--- a/_posts/2020-06-15-Week5.html
+++ b/_posts/2020-06-15-Week5.html
@@ -20,6 +20,8 @@ background: '/img/posts/week5/WavelengthEField.png'
 
 <img src="/research/img/posts/week5/WavelengthEField.png" width=500 >
 
+<img src="/research/img/posts/week5/Uniform-ishEField.png" width=500 >
+
 <p>
     Coupling light with the heat transfer physics was a difficult task because of divergence in the temperature field which took up too much memory on comsol’s solving configurations. However, we were able to see some initial temperature dependency assuming a uniform boundary electric field. The next steps in advancing the wavelength model is to create the same laser beam profile as before (gaussian, circular intersection with silicon) and to incorporate this into existing models. Additionally, the photovoltaic effect relies on wavelength, so we hope to use the tools gained from this modeling effort in attempts to model the photovoltaic effect. 
 </p>
